--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,15 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mustafa Saifee"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:url" content="https://air-quality-in-india.netlify.com/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Mustafa Saifee" />
+    <meta property="og:description" content="Portfolio website" />
+    <meta property="og:image" content="https://air-quality-in-india.netlify.com/img/preview-image.jpg" />
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700,700i|IBM+Plex+Serif:400,400i,600,700|Baloo+Tamma+2:600&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
