--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
       name="description"
       content="Mustafa Saifee"
     />
-    <meta property="og:url" content="https://air-quality-in-india.netlify.com/" />
+    <meta property="og:url" content="https://mustafasaifee.netlify.com/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Mustafa Saifee" />
     <meta property="og:description" content="Portfolio website" />
-    <meta property="og:image" content="https://air-quality-in-india.netlify.com/img/preview-image.jpg" />
+    <meta property="og:image" content="https://mustafasaifee.netlify.com/img/preview-image.jpg" />
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700,700i|IBM+Plex+Serif:400,400i,600,700|Baloo+Tamma+2:600&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png"/>
     <!--
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Mustafa Saifee</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
